* Included a new Activity "NewWordActivity" and other new stuffs:     ** A new item on the XML color file.     ** A new dimens XML file.     ** Items on the string XML file related to the new Activity above.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">WordList</string>
+
+    <string name="hint_word">Palavra...</string>
+    <string name="button_save">Salvar</string>
+    <string name="empty_not_saved">A palavra não salva pois o campo está vazio.</string>
 </resources>
